parser.output
Terminals unused in grammar

    TOKEN_EOF
    TOKEN_ERROR
    TOKEN_AUTO
    TOKEN_WHILE
    TOKEN_FUNCCALL


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration translation_unit
    3                 | %empty

    4 external_declaration: functions
    5                     | declaration

    6 functions: ident TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN parameter_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY statements TOKEN_RCURLY
    7          | ident TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY statements TOKEN_RCURLY
    8          | ident TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN parameter_list TOKEN_RPAREN TOKEN_SEMICOLON
    9          | ident TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN TOKEN_RPAREN TOKEN_SEMICOLON

   10 declaration: ident TOKEN_COLON type_specifier TOKEN_SEMICOLON
   11            | ident TOKEN_COLON array TOKEN_SEMICOLON
   12            | ident TOKEN_COLON type_specifier TOKEN_ASSIGN expression TOKEN_SEMICOLON
   13            | ident TOKEN_COLON array TOKEN_ASSIGN TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON

   14 parameter_list: ident TOKEN_COLON type_specifier TOKEN_COMMA parameter_list
   15               | ident TOKEN_COLON type_specifier
   16               | ident TOKEN_COLON arrnosize TOKEN_COMMA parameter_list
   17               | ident TOKEN_COLON arrnosize

   18 expression: expression TOKEN_ASSIGN logical_or_expr
   19           | logical_or_expr

   20 logical_or_expr: logical_or_expr TOKEN_OR logical_and_expr
   21                | logical_and_expr

   22 logical_and_expr: logical_and_expr TOKEN_AND relational_expr
   23                 | relational_expr

   24 relational_expr: relational_expr TOKEN_LT addsub_expr
   25                | relational_expr TOKEN_GT addsub_expr
   26                | relational_expr TOKEN_LTE addsub_expr
   27                | relational_expr TOKEN_GTE addsub_expr
   28                | relational_expr TOKEN_EQUAL addsub_expr
   29                | relational_expr TOKEN_NOTEQ addsub_expr
   30                | addsub_expr

   31 addsub_expr: addsub_expr TOKEN_PLUS mult_expr
   32            | addsub_expr TOKEN_MINUS mult_expr
   33            | mult_expr

   34 mult_expr: mult_expr TOKEN_MULT exp_expr
   35          | mult_expr TOKEN_DIV exp_expr
   36          | mult_expr TOKEN_MOD exp_expr
   37          | exp_expr

   38 exp_expr: exp_expr TOKEN_EXPONENT unary_expr
   39         | unary_expr

   40 unary_expr: TOKEN_MINUS postfix_expr
   41           | TOKEN_NOT postfix_expr
   42           | postfix_expr

   43 postfix_expr: postfix_expr TOKEN_INCREMENT
   44             | postfix_expr TOKEN_DECREMENT
   45             | grouping

   46 grouping: ident TOKEN_LPAREN expr_list TOKEN_RPAREN
   47         | ident TOKEN_LPAREN TOKEN_RPAREN
   48         | TOKEN_LPAREN expr_list TOKEN_RPAREN
   49         | TOKEN_LPAREN TOKEN_RPAREN
   50         | TOKEN_LCURLY expr_list TOKEN_RCURLY
   51         | ident square_brackets
   52         | types

   53 types: lit_int
   54      | lit_char
   55      | lit_str
   56      | ident
   57      | bool_true
   58      | bool_false
   59      | array

   60 lit_int: TOKEN_LIT_INT

   61 lit_str: TOKEN_LIT_STR

   62 lit_char: TOKEN_LIT_CHAR

   63 ident: TOKEN_IDENT

   64 bool_true: TOKEN_TRUE

   65 bool_false: TOKEN_FALSE

   66 type_specifier: TOKEN_VOID
   67               | TOKEN_INTEGER
   68               | TOKEN_STRING
   69               | TOKEN_CHAR
   70               | TOKEN_BOOLEAN

   71 array: arrsize
   72      | arrnosize

   73 arrsize: TOKEN_ARRAY TOKEN_LBRACKET lit_int TOKEN_RBRACKET type_specifier
   74        | TOKEN_ARRAY TOKEN_LBRACKET lit_int TOKEN_RBRACKET arrsize

   75 arrnosize: TOKEN_ARRAY TOKEN_LBRACKET TOKEN_RBRACKET type_specifier
   76          | TOKEN_ARRAY TOKEN_LBRACKET TOKEN_RBRACKET arrnosize

   77 square_brackets: TOKEN_LBRACKET expression TOKEN_RBRACKET square_brackets
   78                | TOKEN_LBRACKET expression TOKEN_RBRACKET
   79                | TOKEN_LBRACKET statements TOKEN_RBRACKET square_brackets
   80                | TOKEN_LBRACKET statements TOKEN_RBRACKET

   81 statements: open_statement statements
   82           | closed_statement statements
   83           | open_statement
   84           | closed_statement

   85 open_statement: TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN open_statement
   86               | TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN closed_statement
   87               | TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN closed_statement TOKEN_ELSE open_statement
   88               | TOKEN_FOR TOKEN_LPAREN loop_params_maybe TOKEN_SEMICOLON loop_params_maybe TOKEN_SEMICOLON loop_params_maybe TOKEN_RPAREN open_statement

   89 closed_statement: TOKEN_IF TOKEN_LPAREN expression TOKEN_RPAREN closed_statement TOKEN_ELSE closed_statement
   90                 | TOKEN_FOR TOKEN_LPAREN loop_params_maybe TOKEN_SEMICOLON loop_params_maybe TOKEN_SEMICOLON loop_params_maybe TOKEN_RPAREN closed_statement
   91                 | other_statements

   92 loop_params_maybe: %empty
   93                  | expression

   94 other_statements: TOKEN_PRINT expr_list TOKEN_SEMICOLON
   95                 | TOKEN_PRINT TOKEN_SEMICOLON
   96                 | TOKEN_RETURN expression TOKEN_SEMICOLON
   97                 | TOKEN_RETURN TOKEN_SEMICOLON
   98                 | TOKEN_LCURLY statements TOKEN_RCURLY
   99                 | expression TOKEN_SEMICOLON
  100                 | declaration

  101 expr_list: expr_list TOKEN_COMMA expression
  102          | expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_EOF (258)
    TOKEN_IDENT (259) 63
    TOKEN_ERROR (260)
    TOKEN_CHAR (261) 69
    TOKEN_INTEGER (262) 67
    TOKEN_STRING (263) 68
    TOKEN_ARRAY (264) 73 74 75 76
    TOKEN_AUTO (265)
    TOKEN_VOID (266) 66
    TOKEN_BOOLEAN (267) 70
    TOKEN_FALSE (268) 65
    TOKEN_TRUE (269) 64
    TOKEN_IF (270) 85 86 87 89
    TOKEN_FOR (271) 88 90
    TOKEN_PRINT (272) 94 95
    TOKEN_RETURN (273) 96 97
    TOKEN_FUNCTION (274) 6 7 8 9
    TOKEN_ELSE (275) 87 89
    TOKEN_WHILE (276)
    TOKEN_COLON (277) 6 7 8 9 10 11 12 13 14 15 16 17
    TOKEN_SEMICOLON (278) 8 9 10 11 12 13 88 90 94 95 96 97 99
    TOKEN_COMMA (279) 14 16 101
    TOKEN_LPAREN (280) 6 7 8 9 46 47 48 49 85 86 87 88 89 90
    TOKEN_RPAREN (281) 6 7 8 9 46 47 48 49 85 86 87 88 89 90
    TOKEN_LCURLY (282) 6 7 13 50 98
    TOKEN_RCURLY (283) 6 7 13 50 98
    TOKEN_LBRACKET (284) 73 74 75 76 77 78 79 80
    TOKEN_RBRACKET (285) 73 74 75 76 77 78 79 80
    TOKEN_INCREMENT (286) 43
    TOKEN_DECREMENT (287) 44
    TOKEN_NOT (288) 41
    TOKEN_EXPONENT (289) 38
    TOKEN_MULT (290) 34
    TOKEN_DIV (291) 35
    TOKEN_MOD (292) 36
    TOKEN_PLUS (293) 31
    TOKEN_MINUS (294) 32 40
    TOKEN_LT (295) 24
    TOKEN_LTE (296) 26
    TOKEN_GT (297) 25
    TOKEN_GTE (298) 27
    TOKEN_EQUAL (299) 28
    TOKEN_NOTEQ (300) 29
    TOKEN_AND (301) 22
    TOKEN_OR (302) 20
    TOKEN_ASSIGN (303) 6 7 12 13 18
    TOKEN_FUNCCALL (304)
    TOKEN_LIT_STR (305) 61
    TOKEN_LIT_CHAR (306) 62
    TOKEN_LIT_INT (307) 60


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program <decl> (54)
        on left: 1
        on right: 0
    translation_unit <decl> (55)
        on left: 2 3
        on right: 1 2
    external_declaration <decl> (56)
        on left: 4 5
        on right: 2
    functions <decl> (57)
        on left: 6 7 8 9
        on right: 4
    declaration <decl> (58)
        on left: 10 11 12 13
        on right: 5 100
    parameter_list <param_list> (59)
        on left: 14 15 16 17
        on right: 6 8 14 16
    expression <expr> (60)
        on left: 18 19
        on right: 12 18 77 78 85 86 87 89 93 96 99 101 102
    logical_or_expr <expr> (61)
        on left: 20 21
        on right: 18 19 20
    logical_and_expr <expr> (62)
        on left: 22 23
        on right: 20 21 22
    relational_expr <expr> (63)
        on left: 24 25 26 27 28 29 30
        on right: 22 23 24 25 26 27 28 29
    addsub_expr <expr> (64)
        on left: 31 32 33
        on right: 24 25 26 27 28 29 30 31 32
    mult_expr <expr> (65)
        on left: 34 35 36 37
        on right: 31 32 33 34 35 36
    exp_expr <expr> (66)
        on left: 38 39
        on right: 34 35 36 37 38
    unary_expr <expr> (67)
        on left: 40 41 42
        on right: 38 39
    postfix_expr <expr> (68)
        on left: 43 44 45
        on right: 40 41 42 43 44
    grouping <expr> (69)
        on left: 46 47 48 49 50 51 52
        on right: 45
    types <expr> (70)
        on left: 53 54 55 56 57 58 59
        on right: 52
    lit_int <number> (71)
        on left: 60
        on right: 53 73 74
    lit_str <word> (72)
        on left: 61
        on right: 55
    lit_char <letter> (73)
        on left: 62
        on right: 54
    ident <ident> (74)
        on left: 63
        on right: 6 7 8 9 10 11 12 13 14 15 16 17 46 47 51 56
    bool_true <number> (75)
        on left: 64
        on right: 57
    bool_false <number> (76)
        on left: 65
        on right: 58
    type_specifier <type> (77)
        on left: 66 67 68 69 70
        on right: 6 7 8 9 10 12 14 15 73 75
    array <type> (78)
        on left: 71 72
        on right: 11 13 59
    arrsize <type> (79)
        on left: 73 74
        on right: 71 74
    arrnosize <type> (80)
        on left: 75 76
        on right: 16 17 72 76
    square_brackets <expr> (81)
        on left: 77 78 79 80
        on right: 51 77 79
    statements <stmt> (82)
        on left: 81 82 83 84
        on right: 6 7 79 80 81 82 98
    open_statement <stmt> (83)
        on left: 85 86 87 88
        on right: 81 83 85 87 88
    closed_statement <stmt> (84)
        on left: 89 90 91
        on right: 82 84 86 87 89 90
    loop_params_maybe <expr> (85)
        on left: 92 93
        on right: 88 90
    other_statements <stmt> (86)
        on left: 94 95 96 97 98 99 100
        on right: 91
    expr_list <expr> (87)
        on left: 101 102
        on right: 13 46 48 50 94 101


State 0

    0 $accept: . program $end

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 3 (translation_unit)

    program               go to state 2
    translation_unit      go to state 3
    external_declaration  go to state 4
    functions             go to state 5
    declaration           go to state 6
    ident                 go to state 7


State 1

   63 ident: TOKEN_IDENT .

    $default  reduce using rule 63 (ident)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 8


State 3

    1 program: translation_unit .

    $default  reduce using rule 1 (program)


State 4

    2 translation_unit: external_declaration . translation_unit

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 3 (translation_unit)

    translation_unit      go to state 9
    external_declaration  go to state 4
    functions             go to state 5
    declaration           go to state 6
    ident                 go to state 7


State 5

    4 external_declaration: functions .

    $default  reduce using rule 4 (external_declaration)


State 6

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 7

    6 functions: ident . TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN parameter_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY statements TOKEN_RCURLY
    7          | ident . TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY statements TOKEN_RCURLY
    8          | ident . TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN parameter_list TOKEN_RPAREN TOKEN_SEMICOLON
    9          | ident . TOKEN_COLON TOKEN_FUNCTION type_specifier TOKEN_LPAREN TOKEN_RPAREN TOKEN_SEMICOLON
   10 declaration: ident . TOKEN_COLON type_specifier TOKEN_SEMICOLON
   11            | ident . TOKEN_COLON array TOKEN_SEMICOLON
   12            | ident . TOKEN_COLON type_specifier TOKEN_ASSIGN expression TOKEN_SEMICOLON
   13            | ident . TOKEN_COLON array TOKEN_ASSIGN TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON

    TOKEN_COLON  shift, and go to state 10


State 8

    0 $accept: program $end .

    $default  accept


State 9

    2 translation_unit: external_declaration translation_unit .

    $default  reduce using rule 2 (translation_unit)


State 10

    6 functions: ident TOKEN_COLON . TOKEN_FUNCTION type_specifier TOKEN_LPAREN parameter_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY statements TOKEN_RCURLY
    7          | ident TOKEN_COLON . TOKEN_FUNCTION type_specifier TOKEN_LPAREN TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY statements TOKEN_RCURLY
    8          | ident TOKEN_COLON . TOKEN_FUNCTION type_specifier TOKEN_LPAREN parameter_list TOKEN_RPAREN TOKEN_SEMICOLON
    9          | ident TOKEN_COLON . TOKEN_FUNCTION type_specifier TOKEN_LPAREN TOKEN_RPAREN TOKEN_SEMICOLON
   10 declaration: ident TOKEN_COLON . type_specifier TOKEN_SEMICOLON
   11            | ident TOKEN_COLON . array TOKEN_SEMICOLON
   12            | ident TOKEN_COLON . type_specifier TOKEN_ASSIGN expression TOKEN_SEMICOLON
   13            | ident TOKEN_COLON . array TOKEN_ASSIGN TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON

    TOKEN_CHAR      shift, and go to state 11
    TOKEN_INTEGER   shift, and go to state 12
    TOKEN_STRING    shift, and go to state 13
    TOKEN_ARRAY     shift, and go to state 14
    TOKEN_VOID      shift, and go to state 15
    TOKEN_BOOLEAN   shift, and go to state 16
    TOKEN_FUNCTION  shift, and go to state 17

    type_specifier  go to state 18
    array           go to state 19
    arrsize         go to state 20
    arrnosize       go to state 21


State 11

   69 type_specifier: TOKEN_CHAR .

    $default  reduce using rule 69 (type_specifier)


State 12

   67 type_specifier: TOKEN_INTEGER .

    $default  reduce using rule 67 (type_specifier)


State 13

   68 type_specifier: TOKEN_STRING .

    $default  reduce using rule 68 (type_specifier)


State 14

   73 arrsize: TOKEN_ARRAY . TOKEN_LBRACKET lit_int TOKEN_RBRACKET type_specifier
   74        | TOKEN_ARRAY . TOKEN_LBRACKET lit_int TOKEN_RBRACKET arrsize
   75 arrnosize: TOKEN_ARRAY . TOKEN_LBRACKET TOKEN_RBRACKET type_specifier
   76          | TOKEN_ARRAY . TOKEN_LBRACKET TOKEN_RBRACKET arrnosize

    TOKEN_LBRACKET  shift, and go to state 22


State 15

   66 type_specifier: TOKEN_VOID .

    $default  reduce using rule 66 (type_specifier)


State 16

   70 type_specifier: TOKEN_BOOLEAN .

    $default  reduce using rule 70 (type_specifier)


State 17
